--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
           </div>
           </div>
         </div>
-
+        <!-- date and time -->
+        <!-- <div class="current-date">
+        </div> -->
        </section>
     </main>
    </div>
